# cvp

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TODO.md  claimos.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
docs/: AUTH.md  BACKLOG.md  PRD.md  QA.md  RBAC.md  REBRANDING.md  RUNBOOK.md  business_prompts.md  data-model.md  depreciation-schedule.md  prd_prompts.md
migrations/: env.py
migrations/versions/: 20260414_4296f3d15849_initial.py  20260423_cf42abfe3ff8_item_crops_serp_searches_search_hint.py  20260424_6b547029fe90_item_crops_adjusted_bbox.py  20260426_53d00d20ce85_add_matter_ownership_and_item_confirmed_.py  20260426_5cfb44e78ac2_add_groups_users_refresh_tokens_tables.py  20260426_7d17b10b2888_add_matter_access_table.py  20260426_87fac388db1b_add_index_to_refresh_tokens_token_hash.py  20260426_acce28426f15_make_password_hash_nullable_for_invites.py  20260427_6d40e8b7090d_add_audit_logs_table.py  20260427_dcc76f622c6f_add_comments_table.py  20260506_8b3f4be73872_add_vision_models_table_and_audit_.py  20260511_d41ffbf06ede_add_crop_updated_at_to_item_crops.py  20260522_56a54cc0c202_add_vision_job_tables.py  20260604_73361c8303fb_add_feedback_tables.py  20260609_c1999a71280b_add_item_groups.py  20260610_21c1bb38b418_add_app_setting_table.py  20260618_9958928bc311_vision_job_image_region_columns.py  20260708_3099fa2532d7_baseline_claimos_schema.py  20260708_438d468b59ca_baseline_claimos_schema.py  20260716_c9851834200b_migrate_external_claim_access.py  20260716_f8eb20311be3_rbac_v2_grants.py  20260723_4f97bbe2ad3c_claim_nickname.py  20260723_515c6c0e7711_retail_value_shipping.py  20260723_b0fd3df9f4a6_retail_value_shipping.py
scripts/: audit_design_tokens.py  build-css.sh  fetch-tailwind.sh
skills/qa/: cleanup.py  data_factory.py  preflight.py  qa-testing.md  report.py  runner.py
skills/qa/suites/: __init__.py  auth.py  (+6 more)
src/claimos/: bootstrap_admin.py  config.py  css_build.py  db.py  dependencies.py  depreciation.py  main.py  middleware.py  migrate_claim_access.py  migrate_db.py  models.py  models_access.py  models_app_setting.py  models_audit.py  models_auth.py  models_comments.py  models_feedback.py  models_grants.py  models_vision.py  roles.py  seed.py  seed_auth.py  seed_rbac_demo.py  templating.py  theming.py
src/cvp/: auth.py  bootstrap_admin.py  config.py  db.py  dependencies.py  main.py  middleware.py  models.py  models_access.py  models_app_setting.py  models_audit.py  models_auth.py  models_comments.py  models_feedback.py  models_vision.py  seed.py  seed_auth.py  text_validation.py
tests/: conftest.py  test_access_cache.py  test_admin_feedback_router.py  test_admin_internal.py  test_admin_org.py  test_admin_org_grants.py  test_admin_runtime_config.py  test_admin_shell.py  test_admin_system.py  test_admin_vision_models.py  test_app_shell.py  test_audit.py  test_auth.py  test_auth_routes.py  test_bootstrap_admin.py  test_claim_access_migration.py  test_claim_nickname_create.py  test_claim_nickname_display.py  test_claim_nickname_migration.py  test_claim_nickname_model.py  test_claim_nickname_update.py  test_claim_nickname_validation.py  test_client_ip.py  test_comments.py  test_component_classes.py  test_config.py  test_crop_editor_modal.py  test_crop_service.py  test_crops_router.py  test_css_build.py  test_csv_export.py  test_dark_mode_tokens.py  test_db.py  test_dependencies.py  test_depreciation.py  test_design_token_guard.py  test_effective_permissions.py  test_evidence_cleanup.py  test_evidence_grid_pagination.py  test_evidence_remove_all.py  (+57 more)
(+288 files in other folders)
