[project]
name = "cvp"
version = "0.1.0"
description = "Contents Valuation Prototype — internal ops tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "weasyprint>=62",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.scripts]
dev = "cvp.main:run_dev"
seed = "cvp.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/cvp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
