[project]
name = "cvp"
version = "0.1.0"
description = "Contents Valuation Prototype — internal ops tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "weasyprint>=62",
    "pandas>=2.2",
    "pillow>=10.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "cryptography>=42.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
dev = "cvp.main:run_dev"
seed = "cvp.seed:main"
seed-auth = "cvp.seed_auth:main"
bootstrap-admin = "cvp.bootstrap_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/cvp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/cvp/services/vision_prompts.py" = ["E501"]
# Prompt-text fragments for each adapter are long, formatted strings.
"src/cvp/services/vision_adapters.py" = ["E501"]
