[project]
name = "claimos"
version = "0.1.0"
description = "ClaimOS — contents claim valuation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "weasyprint>=62",
    "pandas>=2.2",
    "pillow>=10.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "cryptography>=42.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
dev = "claimos.main:run_dev"
css = "claimos.css_build:main"
seed = "claimos.seed:main"
seed-auth = "claimos.seed_auth:main"
bootstrap-admin = "claimos.bootstrap_admin:main"
migrate-db = "claimos.migrate_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/claimos"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/claimos/services/vision_prompts.py" = ["E501"]
# Prompt-text fragments for each adapter are long, formatted strings.
"src/claimos/services/vision_adapters.py" = ["E501"]
